--- a/.github/ISSUE_TEMPLATE/feedback.yml
+++ b/.github/ISSUE_TEMPLATE/feedback.yml
@@ -10,6 +10,7 @@ body:
         - LogNorth
         - Fusionaly
         - Pomotto
+        - Formlander
     validations:
       required: true
   - type: textarea
